projects/vb6parse/snapshots/syntax/statements/string_manipulation/mid/mid_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/string_manipulation/mid.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: MidStatement
      children:
        - kind: MidKeyword
          text: Mid
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: globalStr
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "5"
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"START\""
